@@ -1,0 +1,2 @@
+Tests/bcp14.xml:5: text 'IS NOT' in bcp14 tag is not bcp14 language
+Tests/bcp14.xml:6: text '<bcp14><i>MUST NOT</i></bcp14>' in bcp14 tag is not bcp14 language
