@@ -1,0 +1,2 @@
+Parsing file Tests/good.svg
+INFO: File conforms to SVG requirements.
